# vidgen-backend

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt
config/: __init__.py  settings.py  urls.py  views.py
generator/: admin.py  models.py  pipeline.py  serializers.py  urls.py  views.py
generator/migrations/: 0001_initial.py  0002_remove_videojob_voice_videojob_voice_id_and_more.py  0003_videojob_background_video_videojob_composite_and_more.py  0004_voice_accent_voice_language.py  0005_videojob_overlay_diameter_videojob_overlay_x_and_more.py  0006_videojob_overlay_border_and_more.py  0007_videojob_overlay_keyframes.py
generator/services/: compositor.py  did.py  elevenlabs.py  imaging.py
