[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.23",
    "django>=5,<6",
    "django-cors-headers>=4.9.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
    "pymysql>=1.2.0",
    "python-decouple>=3.8",
    "requests>=2.34.2",
]
